--- a/index (1).html
+++ b/index (1).html
@@ -84,7 +84,7 @@
         <p>Erat imperdiet dissentias ea usu, alia aliquid corrumpit ea qui. Eu vim oratio conclusionemque, vel at errem nominavi delicatissimi.</p>
       </div>
       <div class="col-lg-4 callout"> <i class="fa fa-flask fa-3x"></i>
-        <h3>TEA</h3>
+        <h3>more WORDS</h3>
         <p>Erat imperdiet dissentias ea usu, alia aliquid corrumpit ea qui. Eu vim oratio conclusionemque, vel at errem nominavi delicatissimi.</p>
       </div>
       <div class="col-lg-4 callout"> <i class="fa fa-life-ring fa-3x"></i>
@@ -150,7 +150,7 @@
           <div class="grid overlay">
             <figure> <img class="img-responsive" src="assets/img/portfolio/folio01.jpg" alt="">
               <figcaption>
-                <h5>Coco Cake</h5>
+                <h5>None</h5>
                 <a data-toggle="modal" href="#myModal" class="btn btn-default">More Details</a> </figcaption>
               <!-- /figcaption --> 
             </figure>
@@ -164,7 +164,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Rose Cake</h4>
+                <h4 class="modal-title">none :)</h4>
               </div>
               <div class="modal-body">
                 <p><img class="img-responsive" src="assets/img/portfolio/folio01-preview.jpg" alt=""></p>
@@ -241,7 +241,7 @@
           <div class="grid overlay">
             <figure> <img class="img-responsive" src="assets/img/portfolio/folio06.jpg" alt="">
               <figcaption>
-                <h5>Cake</h5>
+                <h5>Word</h5>
                 <a data-toggle="modal" href="#myModal" class="btn btn-default">More Details</a> </figcaption>
               <!-- /figcaption --> 
             </figure>
