--- a/index (1).html
+++ b/index (1).html
@@ -325,7 +325,7 @@
        
 	  <i class="fa fa-map-marker fa-2x"></i>
         <strong>cool name</strong>
-		<p>321 Awesome Street<br>
+		<p>### Awesome Street<br>
           Chicago, IL zip</p>
       
       <br/> 
@@ -350,7 +350,6 @@
       <div class="col-md-8"> <span class="copyright">Copyright &copy; 2015. Design by <a href="http://www.webthemez.com">Webthemez</a></span> </div>
       <div class="col-md-4">
         <ul class="list-inline social-buttons">
-          <li><a href="#"><i class="fa fa-twitter"></i></a> </li>
           <li><a href="#"><i class="fa fa-facebook"></i></a> </li>
           <li><a href="#"><i class="fa fa-google-plus"></i></a> </li>
           <li><a href="#"><i class="fa fa-linkedin"></i></a> </li>
