--- a/index (1).html
+++ b/index (1).html
@@ -57,7 +57,7 @@
   <header class="clearfix tb"> 
  <div class="tb-cell text-center">
  <i class="fa fa-heart-o icon"></i>
-    <h1>Hi!</h1>
+    <h1>Work in progress site</h1>
     <p>quote </p>
     <a href="#portfolio" class="smoothScroll btn btn-lg">Today's Special</a> 
 	</div>
