--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav pull-right">
           <li><a href="#home-section" class="smoothScroll">Welcome</a></li>
-          <li> <a href="#blank page" class="smoothScroll">We Offer</a></li>		  
-          <li> <a href="#about" class="smoothScroll"> Our Shop</a></li>
+          <li> <a href="#blank page" class="smoothScroll">Calculus</a></li>		  
+          <li> <a href="#about" class="smoothScroll"> Linear Algebra</a></li>
           <li> <a href="#portfolio" class="smoothScroll"> Special</a></li>
           <li> <a href="#more blank" class="smoothScroll"> Get In Touch</a></li>
         </ul>
