--- a/subpage1.html
+++ b/subpage1.html
@@ -11,7 +11,7 @@
     <h1>Welcome to Subpage 1</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="main.html">Home</a></li>
         <li><a href="subpage1.html">Subpage 1</a></li>
         <li><a href="subpage2.html">Subpage 2</a></li>
         <li><a href="subpage3.html">Subpage 3</a></li>
