--- a/main.html
+++ b/main.html
@@ -22,8 +22,8 @@
 
   <main>
     <section>
-      <h2>Homepage Content</h2>
-      <p>This is the homepage content. Brief overview of the website here.</p>
+      <h2>About me</h2>
+      <p>Welcome to my website! My name is Makayla. On this website, you can find notes and small projects of mine.</p>
     </section>
   </main>
 
