--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="subpage1.html">Subpage 1</a></li>
-        <li><a href="subpage2.html">Subpage 2</a></li>
+        <li><a href="subpage1.html">Calculus</a></li>
+        <li><a href="subpage2.html">Linear Algebra</a></li>
         <li><a href="subpage3.html">Subpage 3</a></li>
         <li><a href="subpage4.html">Subpage 4</a></li>
       </ul>
