--- a/subpage1.html
+++ b/subpage1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to Subpage 1</h1>
+    <h1>Welcome to my Calculus Notes</h1>
     <nav>
       <ul>
         <li><a href="main.html">Home</a></li>
