--- a/subpage2.html
+++ b/subpage2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to Subpage 2</h1>
+    <h1>Welcome to my Linear Algebra Notes</h1>
     <nav>
       <ul>
         <li><a href="main.html">Home</a></li>
