--- a/subpage2.html
+++ b/subpage2.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+
+header {
+  background-color: #333;
+  color: ##8b4014;
+  padding: 20px;
+}
 <html lang="en">
 <head>
   <meta charset="UTF-8">
