--- a/subpage2.html
+++ b/subpage2.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 
-header {
-  background-color: #333;
-  color: ##8b4014;
-  padding: 20px;
+<head>
+<style>
+body {
+  background-color: linen;
 }
+
+h1 {
+  color: maroon;
+  margin-left: 40px;
+}
+</style>
+</head>
+<body>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
