--- a/subpage1.html
+++ b/subpage1.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
+<head>
+<style>
+body {
+  background-color: #ecf0f5;}
+
+h1 {
+  color: navy;
+  margin-left: 40px;
+}
+</style>
+</head>
+<body>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
