--- a/main.html
+++ b/main.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
+
+<head>
+<style>
+body {
+  background-color: black;}
+
+h1 {
+  color: linen;
+  margin-left: 40px;}
+</style>
+</head>
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
