--- a/main.html
+++ b/main.html
@@ -4,9 +4,9 @@
 <style>
 body {
   background-color: black;}
-
-h1 {
-  color: linen;
+p {color: linen}
+li {color: linen}
+h1 {color: linen;
   margin-left: 40px;}
 </style>
 </head>
@@ -16,7 +16,6 @@ h1 {
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Website</title>
-  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
