--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
 body {
   background-color: black;}
 p {color: linen}
+h2 {color: linen}
 li {color: linen}
 h1 {color: linen;
   margin-left: 40px;}
