--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@ body {
   background-color: black;}
 p {color: linen}
 h2 {color: linen}
+a {color: white}
 li {color: linen}
 h1 {color: linen;
   margin-left: 40px;}
