--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-  background-color: black;}
+  background-color: #202020;}
 p {color: linen}
 h2 {color: linen}
 a {color: white}
