--- a/subpage3.html
+++ b/subpage3.html
@@ -3,11 +3,11 @@
 <head>
 <style>
 body {
-  background-color: linen;
+  background-color: #e2d6e8;
 }
 
 h1 {
-  color: purple;
+  color: #4f0c72;
   margin-left: 40px;
 }
 </style>
