--- a/subpage4.html
+++ b/subpage4.html
@@ -3,11 +3,11 @@
 <head>
 <style>
 body {
-  background-color: linen;
+  background-color: #e3e3e3;
 }
 
 h1 {
-  color: maroon;
+  color: #171717;
   margin-left: 40px;
 }
 </style>
