--- a/subpage4.html
+++ b/subpage4.html
@@ -17,7 +17,7 @@ h1 {
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OOps! Nothing here yet</title>
+  <title>Oops! Nothing here yet</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
