--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@ h1 {color: linen;
         <li><a href="index.html">Home</a></li>
         <li><a href="subpage1.html">Calculus</a></li>
         <li><a href="subpage2.html">Linear Algebra</a></li>
-        <li><a href="subpage3.html">Subpage 3</a></li>
+        <li><a href="subpage3.html">Data Visualizations</a></li>
         <li><a href="subpage4.html">Subpage 4</a></li>
       </ul>
     </nav>
