--- a/subpage4.html
+++ b/subpage4.html
@@ -22,7 +22,7 @@ h1 {
 </head>
 <body>
   <header>
-    <h1>Opps! Nothing here yet</h1>
+    <h1>Oops! Nothing here yet</h1>
     <nav>
       <ul>
         <li><a href="main.html">Home</a></li>
