--- a/subpage1.html
+++ b/subpage1.html
@@ -15,7 +15,7 @@ h1 {
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Subpage 1</title>
+  <title>Calculus</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,9 +24,9 @@ h1 {
     <nav>
       <ul>
         <li><a href="main.html">Home</a></li>
-        <li><a href="subpage1.html">Subpage 1</a></li>
-        <li><a href="subpage2.html">Subpage 2</a></li>
-        <li><a href="subpage3.html">Subpage 3</a></li>
+        <li><a href="subpage1.html">Calculus</a></li>
+        <li><a href="subpage2.html">Linear Algebra</a></li>
+        <li><a href="subpage3.html">Data Visualizations</a></li>
         <li><a href="subpage4.html">Subpage 4</a></li>
       </ul>
     </nav>
