--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@ h1 {color: linen;
     <h1>Welcome to My Website</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="main.html">Home</a></li>
         <li><a href="subpage1.html">Calculus</a></li>
         <li><a href="subpage2.html">Linear Algebra</a></li>
         <li><a href="subpage3.html">Data Visualizations</a></li>
