--- a/subpage3.html
+++ b/subpage3.html
@@ -37,7 +37,7 @@ h1 {
   <main>
     <section>
       <h2>Section 1</h2>
-      <img src="bls_bubblechart.png" alt="Image 1">
+      <img src="bls_bubblechart.png" alt="Image 1" width = 200 height = 125>
     </section>
     <!-- Repeat the pattern for the rest of the sections -->
     <!-- Add more sections as needed -->
