--- a/subpage3.html
+++ b/subpage3.html
@@ -36,8 +36,8 @@ h1 {
 
   <main>
     <section>
-      <h2>Section 1</h2>
-      <img src="bls_bubblechart.png" alt="Image 1" width = 500 height = 300>
+      <h2>A Bubble Chart from BLS Data</h2>
+      <img src="bls_bubblechart.png" alt="Image 1" width = 500 height = 200>
     </section>
     <!-- Repeat the pattern for the rest of the sections -->
     <!-- Add more sections as needed -->
