--- a/subpage3.html
+++ b/subpage3.html
@@ -26,9 +26,9 @@ h1 {
     <nav>
       <ul>
         <li><a href="main.html">Home</a></li>
-        <li><a href="subpage1.html">Subpage 1</a></li>
-        <li><a href="subpage2.html">Subpage 2</a></li>
-        <li><a href="subpage3.html">Subpage 3</a></li>
+        <li><a href="subpage1.html">Calculus</a></li>
+        <li><a href="subpage2.html">Linear Algebra</a></li>
+        <li><a href="subpage3.html">Data Visualizations</a></li>
         <li><a href="subpage4.html">Subpage 4</a></li>
       </ul>
     </nav>
@@ -37,7 +37,7 @@ h1 {
   <main>
     <section>
       <h2>A Bubble Chart from BLS Data</h2>
-      <img src="bls_bubblechart.png" alt="Image 1" width = 500 height = 200>
+      <img src="bls_bubblechart.png" alt="Image 1" width = 500 height = 300>
     </section>
     <!-- Repeat the pattern for the rest of the sections -->
     <!-- Add more sections as needed -->
