--- a/subpage2.html
+++ b/subpage2.html
@@ -36,9 +36,24 @@ h1 {
 
   <main>
     <section>
-      <h2>Section 1</h2>
+      <h2>Matrix Notation</h2>
+      <img src="matrixnotes1.jpg" alt="Image">
+    </section>
+    <section>
+      <h2>True and False Statements</h2>
+      <ul>
+        <li>If A + B is defined, then BT+ AT is defined </li>
+        <li>If AB is defined, then BTAT is also defined </li>
+        <li>det(A) = det(A^T) </li>
+        <li>If det(A) != 0 then rank(A) \< n<\li>
+        <li>A system of equations written in form Ax = 0 always has a non-trivial solution if rank(A) is less than the number of equations | TRUE </li>
+        <li>AB = BA if A and B are square matrices and they have the same size | FALSE </li>
+        <li>If the columns of matrix A are linearly dependent, then its rows are also linearly dependent | FALSE </li>
+        <li>A system of equations written in form Ax = b always has a trivial solution | FALSE (could have no solution) </li>
+      </ul>
       <img src="image3.jpg" alt="Image 1">
     </section>
+    
     <section>
       <h2>Section 2</h2>
       <img src="image4.jpg" alt="Image 2">
