--- a/subpage2.html
+++ b/subpage2.html
@@ -42,10 +42,10 @@ h1 {
     <section>
       <h2>True and False Statements</h2>
       <ul>
-        <li>If A + B is defined, then BT+ AT is defined </li>
-        <li>If AB is defined, then BTAT is also defined </li>
-        <li>det(A) = det(A^T) </li>
-        <li>If det(A) != 0 then rank(A) \< n<\li>
+        <li>If A + B is defined, then BT+ AT is defined | TRUE </li>
+        <li>If AB is defined, then BTAT is also defined | TRUE </li>
+        <li>det(A) = det(A^T) | TRUE </li>
+        <li>If det(A) != 0 then rank(A) < n | TRUE <\li>
         <li>A system of equations written in form Ax = 0 always has a non-trivial solution if rank(A) is less than the number of equations | TRUE </li>
         <li>AB = BA if A and B are square matrices and they have the same size | FALSE </li>
         <li>If the columns of matrix A are linearly dependent, then its rows are also linearly dependent | FALSE </li>
